feature: add functional the video response

--- a/stream/index-client.html
+++ b/stream/index-client.html
@@ -66,11 +66,11 @@
 <body>
   <div class="container">
     <div class="video-container">
-      <a href="http://localhost:8080/file/17" download class="hidden">скачать</a>
-      <video class="video-webcam" onclick="this.play()" autoplay></video></br>
+      <a href="http://localhost:8080/api/download-video-speaker/5c06dcc56646571c71f3a16d" download>скачать</a>
+      <!-- <video class="video-webcam" onclick="this.play()" autoplay></video></br>
       <div class="button-wrapper">
         <button type="button" name="button"></button>
-      <div>
+      <div> -->
     </div>
   </div>
 
